Remove 'byebug' and add border to new_picture button

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -98,6 +98,7 @@ label {
 	&:hover, &:focus {
 		color: white;
 		background-color: $facebook_link_blue;
+		border: 1px solid $facebook_link_blue;
 	}
 }
 	
