--- a/app/views/restaurants/_picture.html.erb
+++ b/app/views/restaurants/_picture.html.erb
@@ -35,7 +35,7 @@
 			<%= button_tag type: "button", class: "file_select btn btn_submit" do %>
 				<span class="glyphicon glyphicon-plus"></span>
 			<% end %>
-			<%= f.button "등록", class: "btn btn_submit_blue", style: "border: none;" %>
+			<%= f.button "등록", class: "btn btn_submit_blue" %>
 		</div>
 	<% end %>
 </div>
