--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,6 +1,6 @@
 <% provide(:page_title, "MenuMap 검색") %>
 
-<div id="search" class="container">
+<div id="search" class="container" style="margin-top: 20px;">
 	<div class="col-md-6 col-md-offset-3">
 		<%= form_tag restaurants_path, method: :get, id: "mm_search", name: nil do %>
 			<legend>음식점 검색</legend>
