--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: -20px; padding: 0;">
+<div class="container" style="padding: 0;">
 	<div class="row" style="margin: 0;">
 		<div class="col-md-6 col-md-offset-3" style="padding: 0;">
 
