--- a/app/views/menus/create.js.erb
+++ b/app/views/menus/create.js.erb
@@ -1,3 +1,3 @@
-$("body").append("<%= j render "layouts/flash" %>");
+$("#flash").html("<%= j render "layouts/flash" %>");
 $("#menu_section > ul").html("<%= j render partial: "menu_titles/show", collection: @menu_titles, as: :menu_title %>");
 $("#menu_form").html("<%= j render partial: "menus/new", locals: { menu: Menu.new } %>");
