Widen rst_card's width and focus addr input on show page

--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -55,6 +55,11 @@
 </div>
 
 <script>
+	$(document).on('ready page:load', function() {
+		// Focus addr input.
+		$('#addrcomplete').focus();
+	});
+
 	// Initialize search query.
 	function resetSubcat() {
 		$("#subcategory_select").html("<%= 
