--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-default" style="margin: 0;">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" style="border: none; margin-bottom: 0; display: none;"> 
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" style="border: none; margin-bottom: 0; margin-right: 5px;"> 
 				<span class="glyphicon glyphicon-option-vertical"></span>
       </button>
-      <button type="button" class="navbar-toggle collapsed" style="border: none; margin-bottom: 0;">
+      <button type="button" class="navbar-toggle collapsed" style="border: none; margin-bottom: 0; margin-right: 5px;">
 				<%= link_to search_path, style: "color: initial;" do %>
 					<span class="glyphicon glyphicon-search"></span>
 				<% end %>
@@ -17,8 +17,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-				<li style="display: none;"><%= link_to "자주묻는 질문", qna_path %></li>
 				<li><%= link_to "음식점 검색" , search_path %></li>
+				<li><%= link_to "자주묻는 질문", qna_path %></li>
 				<% if !current_user %>
 					<li style="display: none;"><%= link_to "로그인" , new_user_session_path %></li>
 				<% else %>
