--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -1,31 +1,38 @@
 <% provide(:page_title, "문의사항") %>
 
-<div class="container">
-	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
-			<div style="position: relative;">
-				<h1 style="display: inline;">Q & A</h1>
-				<%= link_to "질문하기", new_question_path, remote: true, data: { toggle: "modal", target: "#myModal" }, style: "position: absolute; bottom: 0; right: 0;" %>
-			</div>
+<div id="qna" class="container" style="margin-top: 20px;">
+	<div class="col-md-6 col-md-offset-3">
+		<h1 class="grey_thin_border" style="font-weight: 400; margin: 0 0 10px; padding: 0 0 10px;">
+			<span class="ubuntu">Q<span style="font-size: 80%"> & </span>A </span>자주묻는 질문
+		</h1>
 
+		<ul class="grey_thin_border" style="list-style: none; padding: 0 0 10px;">
 			<% @notices.each do |notice| %>
-				<a data-toggle="collapse" href="#notice_<%= notice.id %>" class="dropdown_angle">
-					<h3><i class="fa fa-angle-right"></i> <%= notice.question %></h3>
-				</a>
-				<div id="notice_<%= notice.id %>" class="panel-collapse collapse">
-					<p><%= notice.answer.html_safe %></p>
-					<% if current_user && current_user.admin %>
-						<%= link_to "edit", edit_notice_path(notice) %>
-						<%= link_to "destroy", notice_path(notice), method: :delete %>
+				<li class="notice" style="padding: 5px 0; margin: 5px 0;">
+					<%= link_to "#notice_#{notice.id}", style: "text-decoration: none; color: initial;", onclick: "toggleLabelColor($(this))", data: { toggle: "collapse" } do %>
+						<div style="width: 100%;"><span> <%= notice.question %></span></div>
 					<% end %>
+					<div id="notice_<%= notice.id %>" class="panel-collapse collapse" style="padding: 5px;">
+						<%= notice.answer.html_safe %>
+						<% if admin_user? %>
+							<%= link_to "edit", edit_notice_path(notice) %>
+							<%= link_to "destroy", notice_path(notice), method: :delete %>
+						<% end %>
+					</div>
+				</li>
+			<% end %>
+		</ul>
+
+		<div class="grey_thin_border" style="padding-bottom: 10px; text-align: center;">
+			<%= link_to new_question_path, style: "text-decoration: none; color: initial;", remote: true, data: { toggle: "modal", target: "#myModal" } do %>
+				<div style="width: 100%;">
+					<span>질문하기</span>
 				</div>
 			<% end %>
 		</div>
 	</div>
 </div>
 
-<% if current_user && current_user.admin %>
-	<%= link_to "new_notice", new_notice_path %><br />
-<% end %>
+<%= link_to "new_notice", new_notice_path if admin_user? %>
 
 <%= render 'shared/modal' %>
