--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -2,11 +2,11 @@
 
 <div id="qna" class="container" style="margin-top: 20px;">
 	<div class="col-md-6 col-md-offset-3">
-		<h1 class="grey_thin_border" style="font-weight: 400; margin: 0 0 10px; padding: 0 0 10px;">
+		<h1 style="font-weight: 400; margin: 0 0 10px; padding: 0 0 10px;">
 			<span class="ubuntu">Q<span style="font-size: 80%"> & </span>A </span>자주묻는 질문
 		</h1>
 
-		<ul class="grey_thin_border" style="list-style: none; padding: 0 0 10px;">
+		<ul style="list-style: none; padding: 0 0 10px;">
 			<% @notices.each do |notice| %>
 				<li class="notice" style="padding: 5px 0; margin: 5px 0;">
 					<%= link_to "#notice_#{notice.id}", style: "text-decoration: none; color: initial;", onclick: "toggleLabelColor($(this))", data: { toggle: "collapse" } do %>
@@ -23,7 +23,7 @@
 			<% end %>
 		</ul>
 
-		<div class="grey_thin_border" style="padding-bottom: 10px; text-align: center;">
+		<div style="padding-bottom: 10px; text-align: center;">
 			<%= link_to new_question_path, style: "text-decoration: none; color: initial;", remote: true, data: { toggle: "modal", target: "#myModal" } do %>
 				<div style="width: 100%;">
 					<span>질문하기</span>
