--- a/app/views/questions/_fields.html.erb
+++ b/app/views/questions/_fields.html.erb
@@ -1,12 +1,13 @@
 <div class="form-group">
+	<%= f.label :email, "이메일(선택)" %>
 	<% if current_user %>
 		<%= f.text_field :email, value: current_user.email, class: "form-control", readonly: true %>
 	<% else %>
-		<%= f.text_field :email, class: "form-control", placeholder: "이메일(선택)" %>
+		<%= f.text_field :email, class: "form-control" %>
 	<% end %>
 </div>
 
 <div class="form-group">
-	<%= f.label :contents, "질문" %>
+	<%= f.label :contents, "질문*" %>
 	<%= f.text_area :contents, { rows: 10, class: "form-control" } %>
 </div>
