--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="qna" class="container" style="margin-top: 20px;">
 	<div class="col-md-6 col-md-offset-3">
-		<h1 style="font-weight: 400; margin: 0 0 10px; padding: 0 0 10px;">
+		<h1 class="page_title" style="font-weight: 400; margin: 0 0 10px; padding: 0 0 10px;">
 			<span class="ubuntu">Q<span style="font-size: 80%"> & </span>A </span>자주묻는 질문
 		</h1>
 
