--- a/app/views/rest_registers/new.html.erb
+++ b/app/views/rest_registers/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:page_title, "음식점 등록 신청") %>
 
-<div class="container">
+<div class="container" style="margin-top: 20px;">
 	<div class="col-md-6 col-md-offset-3">
 		<%= form_for @rest_register, html: { multipart: true, class: "form-horizontal" } do |f| %>
 			<legend>음식점 추가 신청</legend>
@@ -20,7 +20,7 @@
 
 			<div class="form-group">
 				<div class="col-md-3">
-					<%= f.label :name, "음식점 이름" %>
+					<%= f.label :name, "음식점 이름*" %>
 				</div>
 				<div class="col-md-9">
 					<%= f.text_field :name, class: "form-control" %>
@@ -29,7 +29,7 @@
 
 			<div class="form-group">
 				<div class="col-xs-12 col-md-3">
-					<%= f.label :category_id, "음식 분류" %>
+					<%= f.label :category_id, "음식 분류*" %>
 				</div>
 				<div class="col-md-9">
 					<%= render "shared/category_select", f: f %>
@@ -38,10 +38,10 @@
 
 			<div class="form-group">
 				<div class="col-md-3">
-					<%= f.label :addr, "지역" %>
+					<%= f.label :addr, "지역*" %>
 				</div>
 				<div class="col-md-9">
-					<%= f.text_field :addr, class: "form-control" %>
+					<%= f.text_field :addr, class: "form-control", placeholder: "지번주소가 있으면 빠르게 등록됩니다." %>
 				</div>
 			</div>
 
@@ -73,35 +73,29 @@
 			<div class="form-group">
 				<div class="col-xs-12">
 					<%= f.label :etc, "기타" %>
-					<%= f.text_area :etc, { class: "form-control", cols: 30, rows: 10 } %>
+					<%= f.text_area :etc, { class: "form-control", cols: 30, rows: 10, placehoder: "그 외 정보들을 적어주세요." } %>
 				</div>
 			</div>
 
 			<div class="form-group">
-				<div class="col-md-3">
-					<%= f.label :pictures, "사진 추가" %>
-				</div>
-				<div class="col-md-9">
+				<div class="col-xs-12">
 					<%= f.fields_for :pictures do |ff| %>
 						<%= ff.file_field :img, multiple: true, class: "uploadImage" %>
 					<% end %>
+					<div style="float: right;">
+						<%= button_tag "사진 추가", type: "button", class: "btn btn_submit_blue file_select" %>
+					</div>
 				</div>
 			</div>
 
-			<%= f.button "등록 신청", class: "btn btn-primary btn-block" %>
+			<%= f.button "등록 신청", class: "btn btn_submit btn-block", style: "margin-bottom: 20px;" %>
 		<% end %>
 	</div>
 </div>
 
 <script>
 	$(document).ready( function() {
-		$("#new_rest_register").validate({
-			rules: {
-				//'rest_register[email]': { required: true, email: true },
-				'rest_register[name]': { required: true },
-				'rest_register[addr]': { required: true }
-			}
-		});
 		imageUploadValidate();
+		$('#new_rest_register #rest_register_name').focus();
 	});
 </script>
