--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -124,6 +124,18 @@ label {
 	}
 }
 
+.btn_red {
+	border: 1px solid red;
+	color: red;
+	font-weight: 500;
+	font-size: 85%;
+	&:hover {
+		background-color: red;
+		border-color: rgba(0,0,0,0.2);
+		color: white;
+	}
+}
+
 .blue_outline {
 	&:active, &:hover {
 		border: none;
@@ -262,7 +274,7 @@ footer {
 }
 
 /* home#search */
-#mm_search, #new_rest_register, #new_user {
+#mm_search, #new_rest_register, #new_user, #profiles .edit_user {
 	legend {
 		@extend .left_border_label;
 		border-left-color: $MenuMap_orange;
@@ -271,12 +283,12 @@ footer {
 }
 
 @media (min-width: 992px) {
-	#search, #login, #signup {
+	#search, #login, #signup, #password_reset, #profiles {
 		> div.col-md-6 {
 			padding: 0 30px;
 		}
 	}
-	#mm_search, #new_rest_register, #new_user {
+	#mm_search, #new_rest_register, #new_user, #profiles .edit_user {
 		legend {
 			font-size: 24px;
 		}
@@ -332,11 +344,27 @@ li.notice > div {
 }
 
 /* registrations#new, signup */
-#signup {
+#signup, #profiles {
 	> div > div {
 		margin-bottom: 20px; 
 		padding-bottom: 20px;
 		@extend .grey_thin_border;
+	}
+}
+
+/* profiles#edit */
+#profiles {
+	.btn-facebook {
+		background-color: white;
+		&:hover, &:active, &:focus {
+			background-color: #2d4373;
+		}
+	}
+	.btn_red {
+		background-color: white;
+		&:hover, &:active, &:focus {
+			background-color: red;
+		}
 	}
 }
 
