--- a/app/views/users/profiles/edit.html.erb
+++ b/app/views/users/profiles/edit.html.erb
@@ -1,8 +1,8 @@
-<div class="container">
+<div id="profiles" class="container" style="margin-top: 20px;">
 	<div class="col-md-6 col-md-offset-3">
-		<div style="border-bottom: solid 1px gray; margin-bottom: 2em; padding: 1em 0;">
+		<div>
 			<%= form_for(@user, url: registration_path(@user), html: { method: :put }) do |f| %>
-				<legend>계정 변경</legend>
+				<legend><%= @user.username %> 계정 변경</legend>
 
 				<div class="form-group">
 					<%= f.email_field :email, { class: "form-control", disabled: true } %>
@@ -25,11 +25,11 @@
 					<%= f.password_field :password_confirmation, { class: "form-control", autocomplete: "off", placeholder: "새 비밀번호 확인*" } %>
 				</div>
 
-				<%= f.button "변경사항 저장", class: "btn btn-primary btn-block" %>
+				<%= f.button "변경사항 저장", class: "btn btn-facebook btn-block" %>
 			<% end %>
 		</div>
 
-		<%= button_to "계정 삭제", registration_path(@user), { class: "btn btn-block btn-danger", data: { confirm: "현재 계정이 영원히 삭제됩니다. 계속 하시겠습니까?" }, method: :delete } %>
+		<%= button_to "계정 삭제", registration_path(@user), { class: "btn btn-block btn_red", data: { confirm: "현재 계정이 영원히 삭제됩니다. 계속 하시겠습니까?" }, method: :delete, style: "margin-bottom: 20px;" } %>
 	</div>
 </div>
 
