--- a/app/views/users/profiles/edit.html.erb
+++ b/app/views/users/profiles/edit.html.erb
@@ -13,11 +13,11 @@
 				</div>
 
 				<div class="form-group">
-					<%= f.label :currnet_password, "비밀번호 변경" %> <i>(비밀번호를 변경하지 않는 경우 비워주세요.)</i>
 					<%= f.password_field :current_password, { class: "form-control", autocomplete: "off", placeholder: "현재 비밀번호" } %>
 				</div>
 
 				<div class="form-group">
+					<%= f.label :password, "비밀번호 변경" %> <i>(비밀번호를 변경할 때 채워주세요.)</i>
 					<%= f.password_field :password, { class: "form-control", autocomplete: "off", placeholder: "새 비밀번호*" } %>
 				</div>
 
