--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,4 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= @resource.email %>님 안녕하세요!</p>
+<p>아래의 링크를 누르시면 <span style="font-family: Ubuntu; color: #ea4c15; font-weight: bold;">MenuMap</span>아이디의 비밀번호를 변경하실 수 있습니다.</p><br/>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
-
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p><%= link_to '비밀번호 변경하기', edit_password_url(@resource, reset_password_token: @token) %></p>
