--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,6 +1,6 @@
 <div id="password_reset" class="container" style="margin-top: 20px;">
 	<div class="col-md-6 col-md-offset-3">
-		<!--%= devise_error_messages! %-->
+		<%= devise_error_messages! %>
 
 		<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
 			<legend>비밀번호 찾기</legend>
