--- a/app/views/menu_titles/_new.html.erb
+++ b/app/views/menu_titles/_new.html.erb
@@ -8,7 +8,7 @@
 <div id="menu_title_form" style="display: none;">
 	<div class="form-group">
 		<%= label :menu_title, :title_name, "메뉴 목록" %>
-		<%= text_field :menu_title, :title_name, { class: "form-control", placeholder: "예) '주요메뉴', '음료 및 주류' 등" } %>
+		<%= text_field :menu_title, :title_name, { class: "form-control", placeholder: "예) '메인메뉴', '음료 및 주류' 등" } %>
 	</div>
 
 	<div class="form-group" style="margin: 0; padding-bottom: 15px;">
