--- a/app/views/menus/_field.html.erb
+++ b/app/views/menus/_field.html.erb
@@ -5,7 +5,7 @@
 
 <div class="form-group">
 	<%= f.label :side_info, "간단 정보" %>
-	<%= f.text_field :side_info, class: "form-control", placeholder: "예) (中), 순한맛 등" %>
+	<%= f.text_field :side_info, class: "form-control", placeholder: "예) (中), 순한맛, 한근, 500g 등" %>
 </div>
 
 <div class="form-group">
