--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -81,7 +81,7 @@ label {
 	color: #3B5998;
 	font-weight: 500;
 	font-size: 85%;
-	&:hover, &:focus {
+	&:hover, &:active, &:focus {
 		background-color: #2d4373;
 		border-color: rgba(0,0,0,0.2);
 		color: white;
@@ -129,7 +129,7 @@ label {
 	color: red;
 	font-weight: 500;
 	font-size: 85%;
-	&:hover {
+	&:hover, &:active, &:focus {
 		background-color: red;
 		border-color: rgba(0,0,0,0.2);
 		color: white;
