--- a/app/views/home/brandpage.html.erb
+++ b/app/views/home/brandpage.html.erb
@@ -1,3 +1,5 @@
+<%= image_tag 'menumap/brand_image.png', alt: "MenuMap 브랜드 이미지 || 메뉴맵", style: "display: none;" %>
+
 <div class="container" style="padding: 0;">
 	<div id="home_bg">
 		<p>이 세상 모든 메뉴가 검색되는 그날까지</p>
