--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,4 +1,5 @@
 <% provide(:page_title, "MenuMap 검색") %>
+<%= image_tag 'menumap/brand_image.png', alt: "MenuMap 브랜드 이미지 || 메뉴맵", style: "display: none;" %>
 
 <div id="search" class="container" style="margin-top: 20px;">
 	<div class="col-md-6 col-md-offset-3">
