--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -517,15 +517,14 @@ nav.pagination {
 	ul {
 		margin: 5px;
 		padding: 0;
-		font-size: 0.9em;
+		font-size: 85%;
 		a {
 			color: initial;
 			li {
 				display: inline-block;
-				width: 24%;
-				/* width: 19%; */
+				width: 19%;
 				text-align: center;
-				padding: 5px 0;
+				padding: 8px 0;
 			}
 		}
 	}
