--- a/app/views/restaurants/_comment.html.erb
+++ b/app/views/restaurants/_comment.html.erb
@@ -1,4 +1,4 @@
-<div id="new_comment_section">
+<div id="new_comment_section" class="col-xs-12">
 	<%= render partial: "comments/new", locals: { comment: @comment } %>
 </div>
 
