--- a/app/views/restaurants/_comment.html.erb
+++ b/app/views/restaurants/_comment.html.erb
@@ -1,4 +1,7 @@
 <div id="new_comment_section" class="col-xs-12">
+	<%= link_to "#new_comment", { role: "button", data: { toggle: "collapse" }, style: "text-decoration: none;"} do %>
+		<div style="color: #333; text-align: center;">댓글 작성하기 <i class="fa fa-chevron-down" style="width: initial;"></i></div>
+	<% end %>
 	<%= render partial: "comments/new", locals: { comment: @comment } %>
 </div>
 
@@ -17,6 +20,8 @@
 	</ul>
 
 	<% unless @comments.next_page.nil? %>
-		<%= link_to '댓글 더보기', more_restaurant_comments_path(@restaurant, page: @comments.next_page), id: 'show_more_link', remote: true %>
+		<%= link_to more_restaurant_comments_path(@restaurant, page: @comments.next_page), id: 'show_more_link', remote: true, style: 'text-decoration: none;' do %>
+			<div><span>댓글 더보기</span></div>
+		<% end %>
 	<% end %>
 </div>
