--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -1,10 +1,23 @@
-<li id="comment_<%= comment.id %>">
-	<div style="width: 340px;"><%= comment.contents %></div>
-	<% if star_rating_exists?(comment) %>
-		<div class="star_rating" data-score=<%= comment.rating%>></div>
-	<% end %>
+<li id="comment_<%= comment.id %>" class="comment">
+	<div class="top">
+		<div class="img" style="float: left;">
+			<%= profile_img(comment.user) %>
+		</div>
+		<div class="info">
+			<div>
+				<%= comment.user.username %> &middot; <%= time_ago_in_words(comment.updated_at) %>
+			</div>
+			<% if star_rating_exists?(comment) %>
+				<div class="star_rating" data-score=<%= comment.rating%>></div>
+			<% end %>
+		</div>
+	</div>
+	<div class="tags">
+	</div>
+	<div class="contents">
+		<%= comment.contents %>
+	</div>
 </li>
 
-<%#= time_ago_in_words(comment.created_at) %>
 <%#= link_to "edit", edit_comment_path(comment), class: "edit_comment", remote: true %>
 <%#= link_to "delete", comment_path(comment), class: "delete_comment", method: :delete, remote: true, data: { confirm: "gogo?" } %>
