Show MenuComment tags

--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -13,6 +13,7 @@
 		</div>
 	</div>
 	<div class="tags">
+		<%= blue_menu_comment_tags(comment) %>
 	</div>
 	<div class="contents">
 		<%= comment.contents %>
