Only correct user can see edit and destroy links

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -671,6 +671,11 @@ li.comment {
 		.img {
 			float: left;
 		}
+		.info {
+			a {
+				color: $facebook_link_blue;
+			}
+		}
 	}
 	.tags {
 		clear: both;
