--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -6,7 +6,7 @@
 	<%= f.hidden_field :restaurant_id, value: @restaurant.id %>
 	
 	<%= image_tag '/images/users/default_profile.png', alt: '유저 프로필 이미지', style: 'float: left;' %>
-	<div id="star_rating_form" data-score=<%= comment.rating %>></div>
+	<div class="star_rating_form" data-score=<%= comment.rating %>></div>
 
 	<div class="form-group" style="clear: both;">
 		<%= text_field_tag :menu_comments, nil, { id: "menu_comments_tag", class: "form-control" } %>
@@ -27,15 +27,5 @@
 		},
 		placeholderText: "#메뉴_태그"
 		// removeConfirmation: true,
-	});
-	
-	$("#star_rating_form").raty({
-		path: "/images/star_rating/",
-		half: true,
-		scoreName: "comment[rating]",
-		// In mymaps#edit, star rating should show for references.
-		score: function() {
-			return parseInt($(this).attr("data-score")) / 2;
-		}
 	});
 </script>
