--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -2,6 +2,7 @@ $("#flash").html("<%= j render "layouts/flash" %>");
 $("#comment_section ul#comment_body").prepend("<%= j render partial: "comments/show", locals: { comment: @comment } %>");
 $("#new_comment_section").html("<%= j render partial: "comments/new", locals: { comment: Comment.new } %>");
 
+// When the first comment is created.
 if ($('#no_comment').css('display') == 'block' && $('#comment_section').css('display') == 'none') {
 	$('#no_comment').css('display', 'none');
 	$('#comment_section').css('display', 'block');
