--- a/app/views/comments/update.js.erb
+++ b/app/views/comments/update.js.erb
@@ -1,1 +1,3 @@
-$(this).closest("tr").replaceWith("<%= j(render partial: "comments/show", locals: { comment: @comment }) %>");
+$("#flash").html("<%= j render "layouts/flash" %>");
+$('#edit_comment_<%= @comment.id %>').closest('li').replaceWith("<%= j(render partial: "show", locals: { comment: @comment }) %>");
+showStarRating();
