--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -9,3 +9,4 @@ if ($('#no_comment').css('display') == 'block' && $('#comment_section').css('dis
 };
 
 showStarRating();
+disableCommentPaste('#comment_contents');
