--- a/app/views/comments/_edit.html.erb
+++ b/app/views/comments/_edit.html.erb
@@ -1,4 +1,4 @@
-<li>
+<li id="comment_<%= @comment.id %>">
 	<%= form_for(@comment, remote: true) do |f| %>
 		<div class="star_rating_form" data-score=<%= @comment.rating %>></div>
 		<div class="form-group">
