--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -9,7 +9,7 @@
 	<div class="star_rating_form" data-score=<%= comment.rating %>></div>
 
 	<div class="form-group" style="clear: both;">
-		<%= text_field_tag :menu_comments, nil, { id: "menu_comments_tag", class: "form-control" } %>
+		<%= text_field_tag :menu_comments, nil, { class: "menu_comments_tag", data: { restaurant: @restaurant.id } } %>
 	</div>
 
 	<div class="form-group">
@@ -18,14 +18,3 @@
 
 	<%= f.submit "등록", { id: "update_comment", class: "btn btn_submit", style: "float: right;" }  %>
 <% end %>
-
-<script>
-	// Menu tags for comment
-	$("#menu_comments_tag").tagit({
-		autocomplete: {
-			source: window.location.origin + '/restaurants/<%= @restaurant.id %>/menu_complete'
-		},
-		placeholderText: "#메뉴_태그"
-		// removeConfirmation: true,
-	});
-</script>
