Comments#edit autocomplete menus

--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -20,6 +20,6 @@
 		<%= blue_menu_comment_tags(comment) %>
 	</div>
 	<div class="contents">
-		<%= comment.contents %>
+		<%= simple_format comment.contents %>
 	</div>
 </li>
