--- a/app/views/comments/_edit.html.erb
+++ b/app/views/comments/_edit.html.erb
@@ -1,6 +1,11 @@
 <li id="comment_<%= @comment.id %>">
 	<%= form_for(@comment, remote: true) do |f| %>
 		<div class="star_rating_form" data-score=<%= @comment.rating %>></div>
+
+		<div class="form-group" style="clear: both;">
+			<%= text_field_tag :menu_comments, nil, { class: "menu_comments_tag", data: { restaurant: @comment.restaurant.id } } %>
+		</div>
+
 		<div class="form-group">
 			<%= f.text_area :contents, { class: "form-control", placeholder: "과도한 비난 및 광고성 댓글은 삭제될 수 있습니다.", rows: 3 } %>
 		</div>
