miscellaneous  - change .name_info to .side_info  - change 미확인 to 가격 미확인

--- a/app/views/menus/create.js.erb
+++ b/app/views/menus/create.js.erb
@@ -12,5 +12,5 @@ $("#menu_form").html("<%= j render partial: "menus/new", locals: { menu: Menu.ne
 // When menu is successfully saved.
 <% if @menu.id %>
 	$('#menu_title_<%= @menu.menu_title.id %> div.menu_title').click();
-	// $('#menu_<#%= @menu.id %> .name_info').css('color', '#5890ff')
+	// $('#menu_<#%= @menu.id %> .side_info').css('color', '#5890ff')
 <% end %>
