--- a/app/views/menus/_field.html.erb
+++ b/app/views/menus/_field.html.erb
@@ -18,7 +18,7 @@
 	<%= f.label :sitga, "시가" %>
 
 	<%= f.check_box :unidentified, onchange: "disablePrice()" %>
-	<%= f.label :unidentified, "미확인" %>
+	<%= f.label :unidentified, "가격 미확인" %>
 </div>
 
 <div class="form-group">
