--- a/app/views/menu_comments/_modal_body.html.erb
+++ b/app/views/menu_comments/_modal_body.html.erb
@@ -1,3 +1,9 @@
 <ul id='comment_body' style='list-style: none;'>
 	<%= render partial: 'comments/show', collection: @comments, as: :comment %>
 </ul>
+
+<% unless @comments.next_page.nil? %>
+	<%= link_to more_menu_menu_comments_path(@menu, page: @comments.next_page), class: 'show_more_link', remote: true, style: 'text-decoration: none;' do %>
+		<div><span>댓글 더보기</span></div>
+	<% end %>
+<% end %>
