--- a/app/views/menu_comments/index.js.erb
+++ b/app/views/menu_comments/index.js.erb
@@ -2,3 +2,4 @@ $('.modal-title').replaceWith("<%= j render 'modal_title' %>");
 $('.modal-body').html("<%= j render 'modal_body' %>");
 
 $('#myModal').modal();
+$('#myModal .sitga').css('font-size', '100%');
