--- a/app/views/comments/more.js.erb
+++ b/app/views/comments/more.js.erb
@@ -1,8 +1,8 @@
-$("#comment_body").append("<%= j(render partial: 'comments/show', collection: @comments, as: :comment) %>");
+$("#comment_section #comment_body").append("<%= j(render partial: 'comments/show', collection: @comments, as: :comment) %>");
 
 // Hide link if it is last page otherwise update link.
 <% if @comments.next_page.nil? %>
-    $("#show_more_link").hide();
+    $("#comment_section .show_more_link").hide();
 <% else %>
-    $("#show_more_link").attr("href", "<%= more_restaurant_comments_path(@restaurant, page: @comments.next_page) %>");
+    $("#comment_section .show_more_link").attr("href", "<%= more_restaurant_comments_path(@restaurant, page: @comments.next_page) %>");
 <% end %>
