--- a/app/views/restaurants/_comment.html.erb
+++ b/app/views/restaurants/_comment.html.erb
@@ -17,7 +17,7 @@
 	</ul>
 
 	<% unless @comments.next_page.nil? %>
-		<%= link_to more_restaurant_comments_path(@restaurant, page: @comments.next_page), id: 'show_more_link', remote: true, style: 'text-decoration: none;' do %>
+		<%= link_to more_restaurant_comments_path(@restaurant, page: @comments.next_page), class: 'show_more_link', remote: true, style: 'text-decoration: none;' do %>
 			<div><span>댓글 더보기</span></div>
 		<% end %>
 	<% end %>
