--- a/app/views/menu_comments/index.js.erb
+++ b/app/views/menu_comments/index.js.erb
@@ -3,5 +3,6 @@ $('.modal-body').html("<%= j render 'modal_body' %>");
 
 $('#myModal').modal();
 $('#myModal .sitga').css('font-size', '100%');
+$('h4.modal-title div').css('display', 'inline');
 
 showStarRating();
