--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -2,3 +2,14 @@
 	$('#comment_<%= @comment.id %>').fadeOut();
 <% end %>
 $("#flash").html("<%= j render "layouts/flash" %>");
+
+
+// Menus#index
+/*
+<#% @menus.each do |menu| %>
+<#% byebug %>
+	$("li#menu_<#%= menu.id %>").replaceWith("<#%= j render partial: "menus/show", locals: { menu: menu } %>");
+<#% end %>
+
+showCommentsModal();
+*/
