Slang check for comments#new and comments#edit

--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -19,6 +19,7 @@ starRatingForm();
 disableCommentPaste('#comment_contents');
 commentContentsValidation('#new_comment');
 autocompleteMenus('#new_comment .menu_comments_tag');
+slangCheck("#new_comment", "#comment_contents")
 
 
 // Menus#index
