--- a/app/views/comments/edit.js.erb
+++ b/app/views/comments/edit.js.erb
@@ -10,3 +10,4 @@ autocompleteMenus("#comment_<%= @comment.id %> .menu_comments_tag");
 
 disableCommentPaste("#comment_<%= @comment.id %> #comment_contents");
 commentContentsValidation("#edit_comment_<%= @comment.id %>");
+slangCheck("#edit_comment_<%= @comment.id %>", "#edit_comment_<%= @comment.id %> #comment_contents")
