--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -20,6 +20,7 @@ disableCommentPaste('#comment_contents');
 commentContentsValidation('#new_comment');
 autocompleteMenus('#new_comment .menu_comments_tag');
 slangCheck("#new_comment", "#comment_contents")
+loggedInUserComment();
 
 
 // Menus#index
